Fixes scrollbar overflow from css instead of js

--- a/theme/alert.default.css
+++ b/theme/alert.default.css
@@ -32,30 +32,24 @@ html:lang(en)>body  .alert-js {
   display: block;
 }
 
-.alert-primary {
-  border-color: #337ab7;
-}
-
-.alert-js-header-primary {
-  background-color: #337ab7;
-  border-color: #337ab7;
-  color: #fff;
-}
-
 .alert-js-header {
   border-bottom: 1px solid transparent;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
   border-radius: 0;
   padding: 9px 14px;
+  background-color: #337ab7;
+  border-color: #337ab7;
+  color: #fff;
 }
 
-#alertJSheader h1 {
+.alert-js-header h1 {
   font-size: 1em;
   line-height: 1.2em;
+  color: #fff;
 }
 
-#alertJSheader h2 {
+.alert-js-header h2 {
   font-size: 0.9em;
   line-height: 1em;
   padding-top: 2px;
@@ -127,16 +121,16 @@ html:lang(en)>body  .alert-js {
 
 .alert-js-overlay {
   background: #000;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";       /* IE 8 */
-  filter: alpha(opacity=70);  /* IE 5-7 */
-  -moz-opacity: 0.7;          /* Netscape */
-  -khtml-opacity: 0.7;        /* Safari 1.x */
-  opacity: 0.7; 
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";       /* IE 8 */
+  filter: alpha(opacity=40);  /* IE 5-7 */
+  -moz-opacity: 0.4;          /* Netscape */
+  -khtml-opacity: 0.4;        /* Safari 1.x */
+  opacity: 0.4; 
   z-index: 9998;
 }
 
@@ -180,7 +174,7 @@ html:lang(en)>body  .alert-js {
 .alert-js-animation-bottom,
 .alert-js-animation-left,
 .alert-js-animation-right {
-  position: absolute;
+  position: fixed;
   left: 50%;
   top: 50%;
 }
@@ -290,12 +284,12 @@ and (max-width : 769px) {
 
 @media only screen 
 and (max-width : 450px) {
-  #alertJSheader h1 {
+  .alert-js-header h1 {
     font-size: 0.8em;
     line-height: 1em;
   }
 
-  #alertJSheader h2 {
+  .alert-js-header h2 {
     font-size: 0.7em;
     line-height: 0.9em;
   }
